Task 1: Java 8 and Kotlin installed

--- a/zadanie_1/Dockerfile
+++ b/zadanie_1/Dockerfile
@@ -6,9 +6,9 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y software-properties-common sudo openssl
 RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt-get update && apt-get install -y python3.8
+RUN apt-get update && apt-get install -y python3.8 openjdk-8-jdk kotlin
 
-RUN adduser student
+RUN adduser -shell /bin/bash student
 RUN adduser student sudo
 RUN usermod -p "$(openssl passwd -6 haslo)" student
 USER student
